Uploaded image for project: 'Couchbase Server'
  1. Couchbase Server
  2. MB-34918

StateLock is not held in all cases

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Major
    • 6.5.0
    • 5.5.0, 6.0.1, 6.0.2, 6.5.0
    • couchbase-bucket
    • None
    • Untriaged
    • Unknown

    Description

      The stateLock should be held when running operations in the vbucket to ensure that the vbucket don't change state while we're in the middle of executing code in there.

      The issue was found as part of code inspection for the following methods:

      KVBucket::evictKey
      KVBucket::getRandomKey
      KVBucket::getLocked
      KVBucket::unlockKey
      KVBucket::getKeyStats
      KVBucket::deleteItem

      Attachments

        Issue Links

          No reviews matched the request. Check your Options in the drop-down menu of this sections header.

          Activity

            People

              trond Trond Norbye
              trond Trond Norbye
              Votes:
              0 Vote for this issue
              Watchers:
              2 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Gerrit Reviews

                  There are no open Gerrit changes

                  PagerDuty