MB-34918: Acquire read-lock for KVBucket::stateLock

The stateLock should be held when running operations in
the vbucket to ensure that the vbucket don't change state
while we're in the middle of executing code in there.

The issue was found as part of code inspection for the
following methods:

   KVBucket::evictKey
   KVBucket::getRandomKey
   KVBucket::getLocked
   KVBucket::unlockKey
   KVBucket::getKeyStats
   KVBucket::deleteItem

Change-Id: Ic1587b9aa2401f24a0123309f3c3a58245b8b87c
Reviewed-on: http://review.couchbase.org/111623
Tested-by: Build Bot <build@couchbase.com>
Reviewed-by: Dave Rigby <daver@couchbase.com>